# BYUI-Namebadge4-OTA

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  OBJECTIVES.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  sdkconfig.defaults
.claude/: settings.json
bootloader_components/factory_switch/: CMakeLists.txt  factory_switch.c
bootloader_downloads/: loader_manifest.json
buttons/: CMakeLists.txt  buttons.c
buttons/include/: buttons.h
display/: CMakeLists.txt  display.c  qrcode.c
display/include/: display.h  qrcode.h
docs/: BUILD_GUIDE.md  DEV_CHAT.md  HARDWARE.md  NAMEBADGE_BOOTING.md  NAMEBADGE_and_ARDUINO.md  badge-esp32-s3.net  namebadge_bootloader_claude_prompt.md
factory_self_update/: CMakeLists.txt  factory_self_update.c
factory_self_update/include/: factory_self_update.h
leds/: CMakeLists.txt  leds.c
leds/include/: leds.h
loader_menu/: CMakeLists.txt  action_reset_namebadge.c  loader_menu.c  loader_menu.h
loader_menu/include/: loader_menu.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
ota_manager/: CMakeLists.txt  ota_manager.c
ota_manager/include/: ota_manager.h
portal_mode/: CMakeLists.txt  portal_mode.c
portal_mode/include/: portal_mode.h
splash_screen/: CMakeLists.txt  README.md  image_rgb565.h  png_to_rgb565.py  splash_screen.c
splash_screen/include/: splash_screen.h
tools/: build_index.py  capture_boot_log.py  catalog_apps_example.json  catalog_base.example.json  png_to_icon.py  publish.sh  publish_bootloader.sh
wifi_config/: CMakeLists.txt  wifi_config.c
wifi_config/include/: wifi_config.h
